--- a/package.json
+++ b/package.json
@@ -11,17 +11,25 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@babel/parser": "^7.26.7",
     "@remix-run/node": "^2.15.2",
     "@remix-run/react": "^2.15.2",
     "@remix-run/serve": "^2.15.2",
+    "@types/node": "^22.10.10",
+    "babel": "^6.23.0",
+    "clsx": "^2.1.1",
     "isbot": "^4.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "openai": "^4.80.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-split": "^2.0.14",
+    "tailwind-merge": "^2.6.0",
+    "valibot": "^1.0.0-beta.14"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.2",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "autoprefixer": "^10.4.19",
@@ -33,7 +41,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.1.6",
+    "typescript": "^5.7.3",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1"
   },
